# SurfaceSubdivider

./: .gitignore  CMakeLists.txt  README.md
include/: CatmullClarkSubdivider.h  DooSabinSubdivider.h  Halfedge.h  LoopSubdivider.h  Mesh.h  Model.h  RenderWidget.h  RenderWindow.h  Subdivider.h  Vertex.h
shader/: EdgeFragment.glsl  EdgeFragmentShader.glsl  FacetFragment.glsl  FacetFragmentShader.glsl  FragmentShader.glsl  VertexShader.glsl
src/: CatmullClarkSubdivider.cpp  DooSabinSubdivider.cpp  Halfedge.cpp  LoopSubdivider.cpp  Mesh.cpp  Model.cpp  RenderWidget.cpp  RenderWindow.cpp  Subdivider.cpp  Vertex.cpp  main.cpp
